<resources>
    <string name="app_name">SIATEP</string>
    <string name="title_home">Beranda</string>
    <string name="title_pengumuman">Pengumuman</string>
    <string name="title_profile">Profile</string>
    <string name="profile">Profile</string>

    <string name="error_empty_email">Please insert your email</string>
    <string name="error_invalid_email">The email is invalid</string>
    <string name="error_empty_password">Please insert your password</string>
    <string name="error_password_more_8">Password must more than 8 character</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="camera_x">Camera X</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="description">description</string>
    <string name="name_deskripsi">name deskripsi</string>
    <string name="header">Hello There !</string>
    <string name="subtitle">Please log in first to be able to create a story</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="header_register">Sign Up Now!</string>
    <string name="subtitle_register">Please create your account first to be able to create a story</string>
    <string name="name_regis">name</string>
    <string name="header_welcome">Welcome to My Story App</string>
    <string name="subtitle_welcome">Finally, A Simple way to create your Story</string>
</resources>